[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0" }
env_logger = "0.10.0"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
